--- a/requirements.txt
+++ b/requirements.txt
@@ -4,15 +4,12 @@ itsdangerous==1.1.0
 Jinja2==2.11.3
 MarkupSafe==1.1.1
 Werkzeug==1.0.1
-Keras==2.4.3
-Keras-Preprocessing==1.1.2
 numpy==1.19.5
 pandas==1.2.4
 scipy==1.6.3
 scikit-learn==0.24.2
-matplotlib==3.0.3
-tensorflow==2.4.1
-joblib==1.0.1
-nltk==3.6.2
+bootstrap4==0.1.0
+Keras==2.4.3
+tensorflow-cpu>=2.4.1
+gevent==21.1.2
 Pillow==8.2.0
-
